@startuml
/'Class Pokemon and All Pokemons we have, collected in one package called My Pokemons'/
class Pokemon{}

package "MyPokemons" {
    class Arceus{
        +Arceus(String name, int level)
    }
    class Iggylybuff{
        +Igglybuff(String name, int level)
    }
    class Jigglypuff{
        +Jigglypuff(String name, int level)
    }
    class Lickilicky{
        +Lickilicky(String name, int level)
    }
    class Lickitung{
        +Lickitung(String name, int level)
    }
    class Wigglytuff{
        +Wigglytuff(String name, int level)
    }
}

/'Relation between pokemons and Pokemon class'/
Arceus --> Pokemon
Iggylybuff --> Pokemon
Jigglypuff --> Pokemon
Lickilicky --> Pokemon
Lickitung --> Pokemon
Wigglytuff --> Pokemon

@enduml